# vdjdb-motifs

./: .gitignore  README.md  cluster_members.txt  compute_vdjdb_motifs.Rmd  motif_pwms.txt
notebooks/: clustering_comparison.ipynb  tcrnet_tcrempnet_and_comparison.ipynb  viz_analysis.ipynb
redcea/: pyproject.toml
redcea/src/vdjdb_redcea/: arguments.py  compat.py  config.py  io.py  plotting.py  vdjdb_epitope_clustering.py
redcea/vdjdb_redcea/: __init__.py  arguments.py  io.py  plotting.py  sample_beta_background_by_vj.py  vdjdb_clusters_launch_with_transform.py  vdjdb_epitope_clustering.py
results/redcea/: cluster_members_TRA.txt
scripts/: build_tcrnet_redcea_final_one_panel.py  compute_motif_pwms.py  fetch_redcea_backgrounds.sh  fetch_tcrnet_backgrounds.sh  generate_tcrnet_reports.py  install_redcea.sh  install_tcrnet_deps.R  run_redcea.sh  run_redcea_both.slurm  run_redcea_param_grid.slurm  run_redcea_ylq.sh  run_tcrnet.sh  setup.sh
tcrnet/: compute_pwms.sh  compute_vdjdb_motifs.Rmd
